# not-c

./: .gitignore  .hlint.yaml  README.md  asm.cpp  file.asm  generate.hs  grammar.txt  lexer.hs  parser.hs
backend/: arraytest.asm  asm-interp.cc  dna-desc.txt  ir-dest.txt  ir_interp.cc  test.asm
frontend/: .hlint.yaml  CHANGELOG.md  definitely-not-c.cabal  hie.yaml  simple.nc  struct.nc  test.nc
frontend/src/: CompilerMain.hs  CompilerShared.hs  CompilerShow.hs  Generator.hs  GeneratorX86.hs  Lexer.hs  Minimal64.hs  Parser.hs  ParserStateful.hs  Typecheck.hs  Validator.hs
tests/: binarytree.nc  simple.nc  struct.nc  test.asm
