cabal-version:      2.4
name:               definitely-not-c
version:            0.1.0.0

synopsis: Compiler frontend for definitely not c

description: Implements the compiler frontend for definitely not c, generates intermediate code

-- bug-reports:

-- The license under which the package is released.
-- license:
author:             vyuuui
maintainer:         tyrannicanine@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable definitely-not-c
    main-is: ParserStateful.hs
    -- main-is:          CompilerMain.hs
    ghc-options:      -dynamic

    -- Modules included in this executable, other than Main.
    other-modules: Lexer, Parser, Generator

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0,
                      monad-loops ^>=0.4.3,
                      containers ^>=0.6.4.1,
                      mtl ^>=2.2.2,
                      transformers ^>=0.5.6.2
    hs-source-dirs:   src
    default-language: Haskell2010
